# mail-notification

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.autogen  Makefile.in  NEWS  README  README.orig  TODO  TRANSLATING  acinclude.m4  aclocal.m4  aml.make  autogen.sh  autotools.conf  config.h.in  configure  configure.ac  intltool-extract.in  intltool-merge.in  intltool-update.in  jb  mkinstalldirs  sylpheed-locking.diff
aml/: Makefile.am  Makefile.aml  Makefile.in  aml.c  aml.make
art/: Makefile.am  Makefile.in
data/: GNOME_MailNotification.server.in.in  GNOME_MailNotification_Automation.server.in.in  GNOME_MailNotification_Evolution.server.in  Makefile.am  Makefile.in  mail-notification-properties.desktop.in  mail-notification.desktop  mail-notification.desktop.in  mail-notification.schemas  mail-notification.schemas.in  mail-notification.schemas.in.in  mail-notification.soundlist.in  sylpheed-locking.diff
help/: Makefile.in  xmldocs.make
help/C/: Makefile.am  Makefile.in  documentation-license.xml  mail-notification-C.omf  mail-notification-C.omf.in  mail-notification.xml  software-license.xml
jbsrc/: jb.c
jbsrc/lib/: README
jbsrc/lib/src/core/: jb-action.c  jb-action.h  jb-compile-options.c  jb-compile-options.h  jb-config.c  jb-config.h  jb-decls.h  jb-feature.c  jb-feature.h  jb-group.c  jb-group.h  jb-install-options.c  jb-install-options.h  jb-main.c  jb-main.h  jb-resource.c  jb-resource.h  jb-tests.c  jb-tests.h  jb-util.c  jb-util.h  jb-variable.c  jb-variable.h  jb.h
jbsrc/lib/src/extras/: jb-dbus.c  jb-dbus.h  jb-endianness.c  jb-endianness.h  jb-evolution-plugin.c  jb-evolution-plugin.h  jb-openssl.c  jb-openssl.h  jb-sasl2.c  jb-sasl2.h  jb-string-arch-unaligned.c  jb-string-arch-unaligned.h
m4/: Makefile.am  Makefile.in  evolution-plugin.m4  gnome.m4  icu.m4  idl.m4  intltool.m4  openssl.m4  pkg.m4  reentrant-resolver.m4  sasl2.m4  string-arch-unaligned.m4
po/: ChangeLog  LINGUAS  Makefile.in.in  POTFILES.in  POTFILES.skip  bg.gmo  bg.po  ca.po  cs.po  de.gmo  de.po  es.po  fr.gmo  fr.po  ja.po  mail-notification.pot  nl.po  pl.gmo  pl.po  pt.gmo  pt.po  pt_BR.po  ru.gmo  ru.po  sr.gmo  sr.po  sr@Latn.gmo  sr@Latn.po  sv.po
src/: GNOME_MailNotification.idl  GNOME_MailNotification_Evolution.idl  MNAutomation.idl  Makefile.am  Makefile.in  aml.make  automake.xml  egg-editable-toolbar.c  egg-editable-toolbar.h  egg-toolbar-editor.c  egg-toolbars-model.c  egg-toolbars-model.h  eggtrayicon.c  eggtrayicon.h  ent2h.sh  mail-notification.c  mn-about-dialog-private.h  mn-about-dialog.c  mn-about-dialog.gob  mn-about-dialog.h  mn-auth-combo-box-private.h  mn-auth-combo-box.c  mn-auth-combo-box.gob  mn-auth-combo-box.h  mn-authenticated-mailbox-private.h  mn-authenticated-mailbox-properties-private.h  mn-authenticated-mailbox-properties.c  mn-authenticated-mailbox-properties.gob  mn-authenticated-mailbox-properties.h  mn-authenticated-mailbox.c  mn-authenticated-mailbox.gob  mn-authenticated-mailbox.h  mn-autodetect-mailbox-properties-private.h  mn-autodetect-mailbox-properties.c  mn-autodetect-mailbox-properties.gob  mn-autodetect-mailbox-properties.h  mn-automation-private.h  mn-automation.c  mn-automation.gob  mn-automation.h  (+360 more)
tests/: Makefile.am  Makefile.in  test-sgml-ref.c  test-uri.c  test-uri.expected  test-vfs-read-line.c  test-vfs-read-line1.expected  test-vfs-read-line1.input  test-vfs-read-line2.expected  test-vfs-read-line2.input
ui/: Makefile.am  Makefile.in  add-pop3-strings.c  add-pop3.glade  add-pop3.gladep  authentication.glade  authentication.gladep  dialog.glade  dialog.gladep  edit-toolbars-dialog.glade  edit-toolbars-dialog.gladep  edit-toolbars.glade  edit-toolbars.gladep  mail-summary-popup.glade  mail-summary-popup.gladep  mailbox-properties-dialog.glade  mailbox-properties-dialog.gladep  mailbox-properties-strings.c  mailbox-properties.glade  mailbox-properties.gladep  main.glade  main.gladep  menu-strings.c  menu.glade  menu.gladep  menus.xml  preferences-strings.c  preferences.glade  preferences.gladep  properties-dialog.glade  properties-dialog.gladep  properties.glade  properties.gladep  summary-dialog.glade  summary-dialog.gladep  summary-popup.glade  summary-popup.gladep  toolbars.xml  welcome.glade  welcome.gladep
