SUBDIRS = art data help m4 po src ui

if WITH_REGRESSION_TESTS
SUBDIRS += tests
endif

EXTRA_DIST = \
	COPYING-DOCS		\
	Makefile.autogen	\
	TRANSLATING		\
	aml.make		\
	autogen.sh		\
	intltool-extract.in	\
	intltool-merge.in	\
	intltool-update.in	\
	sylpheed-locking.diff

DISTCLEANFILES = \
	intltool-extract	\
	intltool-merge		\
	intltool-update
