GNOME_IMAGES = mail-notification.png
APP_IMAGES = \
	about-icon.png		\
	logo.png		\
	mail-error.png		\
	mail.png		\
	no-mail-error.png	\
	no-mail.png		\
	preferences-icon.png	\
	unsupported.png

gnome_pixmapsdir = $(datadir)/pixmaps
dist_gnome_pixmaps_DATA = $(GNOME_IMAGES)

app_pixmapsdir = $(pkgdatadir)/ui
dist_app_pixmaps_DATA = $(APP_IMAGES)
